<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
<string name="app_name">Justjava</string>
    <!-- List of toppings Name-->
    <string name="toppings">Toppings</string>
    <string name="chocolate">Chocolate Toppings</string>
    <string name="Whipped">Whipped Cream</string>
    <string name="name">Your Name</string>
    <string name="quantity">Quantity </string>
    <string name="quantity2">Quantity</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="plus">+</string>
    <string name="orders">Order Summary</string>
    <string name="amount">$0</string>
    <string name="order">order</string>
    <!-- Java String resources-->
    <!-- Order summary name-->
    <string name="order_summary_name"> Name: <xliff:g id= "name" example="kaptain ridwan">%s</xliff:g></string>


    <string name="thank_you">Thank You</string>
    <string name="total">Total:</string>
    <string name="quantity_main">Quantity</string>
    <string name="add_chocolate">Add Chocolate?</string>
    <string name="Add_WhippedCream">Add Whipped Cream?</string>
    <string name="toppingsJ">Toppings</string>


</resources>
